--- a/Week4/MDF1-wk4/MDF1-wk4/en.lproj/FirstViewController.xib
+++ b/Week4/MDF1-wk4/MDF1-wk4/en.lproj/FirstViewController.xib
@@ -37,14 +37,13 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUITableView" id="619554025">
+					<object class="IBUITableView" id="565561796">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 411}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor" id="229627063">
+						<object class="NSColor" key="IBUIBackgroundColor" id="29013562">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -58,16 +57,15 @@
 						<float key="IBUISectionHeaderHeight">22</float>
 						<float key="IBUISectionFooterHeight">22</float>
 					</object>
-					<object class="IBUIView" id="1036184999">
+					<object class="IBUIView" id="282645200">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="365158602">
-								<reference key="NSNextResponder" ref="1036184999"/>
+							<object class="IBUILabel" id="919301380">
+								<reference key="NSNextResponder" ref="282645200"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 148}, {280, 36}}</string>
-								<reference key="NSSuperview" ref="1036184999"/>
-								<reference key="NSWindow"/>
+								<reference key="NSSuperview" ref="282645200"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -75,7 +73,7 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">Label</string>
-								<object class="NSColor" key="IBUITextColor" id="571650662">
+								<object class="NSColor" key="IBUITextColor" id="418076054">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
 								</object>
@@ -93,12 +91,11 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUILabel" id="504208959">
-								<reference key="NSNextResponder" ref="1036184999"/>
+							<object class="IBUILabel" id="496382504">
+								<reference key="NSNextResponder" ref="282645200"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 192}, {280, 43}}</string>
-								<reference key="NSSuperview" ref="1036184999"/>
-								<reference key="NSWindow"/>
+								<reference key="NSSuperview" ref="282645200"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -106,7 +103,7 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">Label</string>
-								<reference key="IBUITextColor" ref="571650662"/>
+								<reference key="IBUITextColor" ref="418076054"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
@@ -121,12 +118,11 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUIButton" id="783051460">
-								<reference key="NSNextResponder" ref="1036184999"/>
+							<object class="IBUIButton" id="759842449">
+								<reference key="NSNextResponder" ref="282645200"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{124, 336}, {72, 37}}</string>
-								<reference key="NSSuperview" ref="1036184999"/>
-								<reference key="NSWindow"/>
+								<reference key="NSSuperview" ref="282645200"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -134,7 +130,7 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<int key="IBUIButtonType">1</int>
 								<string key="IBUINormalTitle">Back</string>
-								<reference key="IBUIHighlightedTitleColor" ref="229627063"/>
+								<reference key="IBUIHighlightedTitleColor" ref="29013562"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
@@ -156,7 +152,6 @@
 						</array>
 						<string key="NSFrame">{{0, -24}, {320, 460}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -170,9 +165,8 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 411}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="619554025"/>
-				<reference key="IBUIBackgroundColor" ref="229627063"/>
+				<reference key="NSNextKeyView" ref="565561796"/>
+				<reference key="IBUIBackgroundColor" ref="29013562"/>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<object class="IBUISimulatedTabBarMetrics" key="IBUISimulatedBottomBarMetrics"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -192,7 +186,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">table</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="619554025"/>
+						<reference key="destination" ref="565561796"/>
 					</object>
 					<int key="connectionID">12</int>
 				</object>
@@ -208,7 +202,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">typeLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="365158602"/>
+						<reference key="destination" ref="919301380"/>
 					</object>
 					<int key="connectionID">17</int>
 				</object>
@@ -216,7 +210,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">itemLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="504208959"/>
+						<reference key="destination" ref="496382504"/>
 					</object>
 					<int key="connectionID">19</int>
 				</object>
@@ -224,14 +218,14 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">view2</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="1036184999"/>
+						<reference key="destination" ref="282645200"/>
 					</object>
 					<int key="connectionID">21</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataSource</string>
-						<reference key="source" ref="619554025"/>
+						<reference key="source" ref="565561796"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">9</int>
@@ -239,7 +233,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="619554025"/>
+						<reference key="source" ref="565561796"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">10</int>
@@ -247,7 +241,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">onClick:</string>
-						<reference key="source" ref="783051460"/>
+						<reference key="source" ref="759842449"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -266,8 +260,8 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="619554025"/>
-							<reference ref="1036184999"/>
+							<reference ref="565561796"/>
+							<reference ref="282645200"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -284,34 +278,34 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="619554025"/>
+						<reference key="object" ref="565561796"/>
 						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">13</int>
-						<reference key="object" ref="1036184999"/>
+						<reference key="object" ref="282645200"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="504208959"/>
-							<reference ref="783051460"/>
-							<reference ref="365158602"/>
+							<reference ref="496382504"/>
+							<reference ref="759842449"/>
+							<reference ref="919301380"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">15</int>
-						<reference key="object" ref="504208959"/>
-						<reference key="parent" ref="1036184999"/>
+						<reference key="object" ref="496382504"/>
+						<reference key="parent" ref="282645200"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="365158602"/>
-						<reference key="parent" ref="1036184999"/>
+						<reference key="object" ref="919301380"/>
+						<reference key="parent" ref="282645200"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">24</int>
-						<reference key="object" ref="783051460"/>
-						<reference key="parent" ref="1036184999"/>
+						<reference key="object" ref="759842449"/>
+						<reference key="parent" ref="282645200"/>
 					</object>
 				</array>
 			</object>
@@ -331,60 +325,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">25</int>
+			<int key="maxID">27</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">FirstViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">onClick:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">onClick:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">onClick:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="itemLabel">UILabel</string>
-						<string key="mainView">UIView</string>
-						<string key="table">UITableView</string>
-						<string key="typeLabel">UILabel</string>
-						<string key="view2">UIView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="itemLabel">
-							<string key="name">itemLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="mainView">
-							<string key="name">mainView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="table">
-							<string key="name">table</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="typeLabel">
-							<string key="name">typeLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="view2">
-							<string key="name">view2</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FirstViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
